# odds_analysis_system2

./: README.md  app.py  gunicorn_config.py  odds_collector.py  odds_scraper.py  requirements.txt
StartupStarter/: alerts.py  config.py  holzhauer_strategy.py  main.py  nba_analyzer.py  nba_data_collector.py  odds_history.py  pyproject.toml
StartupStarter/attached_assets/: Pasted--1-Coleta-de-Dados-100-Autom-tica-e-Gratuita-Para-prever-o-desempenho-dos-jogadores-e-times--1738523691717.txt  Pasted-Advanced-Sports-Betting-Prediction-System-Step-1-Fetch-Upcoming-Games-We-can-use-the-balldontlie-io-1738524705180.txt  Pasted-How-to-Implement-James-Holzhauer-s-Strategy-for-Maximum-Profit-100-Free-Your-system-is-already-co-1738523370514.txt  Pasted-o-store-all-NBA-teams-and-players-in-a-database-and-enable-detailed-analysis-before-during-and-aft-1738524839803.txt  alerts.py  app.py  config.py  download_logos.py  holzhauer_nba_analyzer.py  index.html  nba_analyzer.py  ngrok_config.py  odds_analyzer.py  odds_collector.py  package-lock.json  package.json  render.yaml  schema.ts
StartupStarter/client/: index.html
StartupStarter/client/src/: App.tsx
StartupStarter/client/src/components/: BettingInsights.tsx  Dashboard.tsx  ScoreBoard.tsx  StatisticsPanel.tsx  TeamComparison.tsx
StartupStarter/client/src/hooks/: useScores.ts  useStats.ts
StartupStarter/data/: odds_history.csv
StartupStarter/db/: schema.ts
StartupStarter/server/: index.ts
StartupStarter/server/routes/: scores.ts  stats.ts
odds_analysis_system/: README.md  app.py  config.py  gunicorn.conf.py  run.py  (+15 more)
(+13 files in other folders)
